# relformer

./: .gitignore  CMakeLists.txt  evaluate_sample_images.py  evaluate_simple_images.py  main.py  package.xml  requirements.txt  setup.py
config/custom_config/: custom_config_deltanet_conv.json  custom_config_deltanet_transformer_encoder.json  custom_config_relformer.json  custom_config_relformer_mod.json
datasets/: UnrealCustomRelPoseDataset.py
ros/launch/: relformer_infer.launch
ros/scripts/: images_pub_node.py  relformer_infer_node,py  relformer_infer_node.py
runs/Jun30_16-28-30_aiiacvmllab-Desktop/: events.out.tfevents.1688131710.aiiacvmllab-Desktop
util/: utils.py
