<?xml version="1.0"?>
<package format="2">
   <name>relformer_transformer</name>
   <version>1.0.0</version>
   <description>The relformer_transformer package</description>

   <maintainer email="marrcogrova@gmail.com">Marco A. Montes Grova</maintainer>

   <license>BSD</license>

   <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

</package>